# powersets

./: LICENSE  README.md  powersets.cabal  powersets.rb  stack.yaml
src/: Lib.hs
test/: IPPC.hs  Spec.hs
