cabal-version: 2.4

name:           powersets
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/igrep/powersets#readme>
homepage:       https://github.com/igrep/powersets#readme
bug-reports:    https://github.com/igrep/powersets/issues
author:         YAMAMOTO Yuji
maintainer:     igrep@n.email.ne.jp
copyright:      (c) 2021 YAMAMOTO Yuji
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    powersets.rb

source-repository head
  type: git
  location: https://github.com/igrep/powersets

library
  exposed-modules: Lib
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite powersets-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  other-modules:
      IPPC
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , powersets
    , sydtest
    , text
    , typed-process
    , QuickCheck
  default-language: Haskell2010
